## Change the TESTING_MODULE_NAME below and that's it.

INCLUDE(PackageAddExecutable)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/..
  ${CMAKE_CURRENT_BINARY_DIR}
  )

## EDIT STATEMENT BELOW ONLY
SET(TESTING_MODULE_NAME PackageName_ClassName)

######################################################################

SET(PREPROCESSING_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/${TESTING_MODULE_NAME}_tests.un)
SET(FORTRAN_DRIVER_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../unittest.F90)
SET(FORTRAN_DRIVER_STEM ${TESTING_MODULE_NAME}_run_one_test)
SET(FORTRAN_CALLS_STEM ${TESTING_MODULE_NAME}_test_calls)
SET(FORTRAN_IMPLS_STEM ${TESTING_MODULE_NAME}_test_impls)

######################################################################

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_IMPLS_STEM}.f90
  COMMAND cpp ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_IMPLS_STEM}.f90
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_CALLS_STEM}.f90
  COMMAND cpp -DMAIN_UNITTEST_DRIVER ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_CALLS_STEM}.f90
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_DRIVER_STEM}.tests
  COMMAND cpp -DMAIN_UNITTEST_DRIVER_CXX ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_DRIVER_STEM}.tests
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_DRIVER_STEM}.f90
  COMMAND cpp -DMAIN_UNITTEST_DRIVER -DCLASS=${TESTING_MODULE_NAME} ${FORTRAN_DRIVER_TEMPLATE} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_DRIVER_STEM}.f90
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

SET_PROPERTY(
  SOURCE ${FORTRAN_DRIVER_STEM}.tests
  APPEND PROPERTY COMPILE_DEFINITIONS MAIN_UNITTEST_DRIVER_CXX
  )

######################################################################

PACKAGE_ADD_EXECUTABLE(${FORTRAN_DRIVER_STEM}
  SOURCES
  ${FORTRAN_DRIVER_STEM}.f90
  ${FORTRAN_CALLS_STEM}.f90
  ${FORTRAN_IMPLS_STEM}.f90
  ${FORTRAN_DRIVER_STEM}.tests
  ${PREPROCESSING_INPUT}
  ${ALL_MACRO_FILES}
  NOEXEPREFIX
  )

TARGET_LINK_LIBRARIES(${FORTRAN_DRIVER_STEM} fortrilinos)

PACKAGE_ADD_TEST(
  ../ForTrilinos_unittest_launcher
  NOEXEPREFIX
  NAME ${FORTRAN_DRIVER_STEM}
  ARGS ${FORTRAN_DRIVER_STEM}.tests
  COMM serial
  PASS_REGULAR_EXPRESSION "END RESULT: ALL TESTS PASSED"
  )

######################################################################

