## Change the TESTING_MODULE_NAME below and that's it.

INCLUDE(PackageAddExecutable)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/..
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}/..
  )

## EDIT STATEMENT BELOW ONLY
SET(TESTING_MODULE_NAME PackageName_ClassName)

######################################################################

SET(PREPROCESSING_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/${TESTING_MODULE_NAME}_tests.un)
SET(FORTRAN_DRIVER_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../unittest.F90)
SET(FORTRAN_DRIVER_STEM ${TESTING_MODULE_NAME}_run_one_test)
SET(FORTRAN_CALLS_STEM ${TESTING_MODULE_NAME}_test_calls)
SET(FORTRAN_IMPLS_STEM ${TESTING_MODULE_NAME}_test_impls)

######################################################################

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_IMPLS_STEM}.f90
  COMMAND cpp -include ${CONFIG_FILE} ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_IMPLS_STEM}.f90
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_CALLS_STEM}.f90
  COMMAND cpp -include ${CONFIG_FILE} -DMAIN_UNITTEST_DRIVER ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp - > ${FORTRAN_CALLS_STEM}.f90
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_DRIVER_STEM}.tests
  COMMAND cpp -include ${CONFIG_FILE} -DMAIN_UNITTEST_DRIVER_CXX ${PREPROCESSING_INPUT} ${FORTRILINOS_LINE_BREAKER} | cpp -P - > ${FORTRAN_DRIVER_STEM}.tests
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES}
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${FORTRAN_DRIVER_STEM}.mpitests
  COMMAND ${CMAKE_CURRENT_BINARY_DIR}/../ForTrilinos_unittest_launcher.exe -v ${FORTRAN_DRIVER_STEM}.tests > ${FORTRAN_DRIVER_STEM}.mpitests
  DEPENDS ${PREPROCESSING_INPUT} ${ALL_MACRO_FILES} ${FORTRAN_DRIVER_STEM}.tests ${CMAKE_CURRENT_BINARY_DIR}/../ForTrilinos_unittest_launcher.exe
  )

ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/class_specific_macros.h
  COMMAND cpp -P -C -DCLASSNAME=${TESTING_MODULE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../class_specific_macros.hpp | cpp -P -traditional - > ${CMAKE_CURRENT_BINARY_DIR}/class_specific_macros.h
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../class_specific_macros.hpp
  )

SET_PROPERTY(
  SOURCE ${FORTRAN_DRIVER_TEMPLATE}
  APPEND PROPERTY COMPILE_DEFINITIONS MAIN_UNITTEST_DRIVER CLASS=${TESTING_MODULE_NAME}
  )

######################################################################

PACKAGE_ADD_EXECUTABLE(${FORTRAN_DRIVER_STEM}
  SOURCES
  ${FORTRAN_DRIVER_TEMPLATE}
  ${FORTRAN_CALLS_STEM}.f90
  ${FORTRAN_IMPLS_STEM}.f90
  ${FORTRAN_DRIVER_STEM}.tests
  ${FORTRAN_DRIVER_STEM}.mpitests
  ${CMAKE_CURRENT_BINARY_DIR}/class_specific_macros.h
  ${PREPROCESSING_INPUT}
  ${ALL_MACRO_FILES}
  NOEXEPREFIX
  )

TARGET_LINK_LIBRARIES(${FORTRAN_DRIVER_STEM} fortrilinos)

PACKAGE_ADD_TEST(
  ../ForTrilinos_unittest_launcher
  NOEXEPREFIX
  NAME ${FORTRAN_DRIVER_STEM}
  ARGS ${FORTRAN_DRIVER_STEM}.tests
  COMM serial
  PASS_REGULAR_EXPRESSION "END RESULT: ALL TESTS PASSED"
  )

PACKAGE_ADD_TEST(
  ${FORTRAN_DRIVER_STEM}
  NOEXEPREFIX
  NAME ${FORTRAN_DRIVER_STEM}
  ARGS "-f ${FORTRAN_DRIVER_STEM}.mpitests"
  COMM mpi
  NUM_MPI_PROCS 3
  PASS_REGULAR_EXPRESSION "END RESULT: ALL TESTS PASSED"
  )

######################################################################

